--- a/index.css
+++ b/index.css
@@ -46,7 +46,8 @@ header {
   font-size: 24px;
   font-style: normal;
   font-weight: 700;
-  line-height: 32px; /* 133.333% */
+  line-height: 32px;
+  /* 133.333% */
   letter-spacing: -0.333px;
   color: #fff;
   margin-top: 20px;
@@ -59,7 +60,8 @@ header {
   font-size: 40px;
   font-style: normal;
   font-weight: 700;
-  line-height: 40px; /* 100% */
+  line-height: 40px;
+  /* 100% */
   letter-spacing: -1.136px;
   width: 95%;
   margin-bottom: 20px;
@@ -83,7 +85,8 @@ header {
   font-size: 16px;
   font-style: normal;
   font-weight: 700;
-  line-height: 26px; /* 162.5% */
+  line-height: 26px;
+  /* 162.5% */
   letter-spacing: 2.286px;
   border-bottom: 2px solid #4ee1a0;
 }
@@ -104,7 +107,8 @@ header {
   font-size: 32px;
   font-style: normal;
   font-weight: 700;
-  line-height: 40px; /* 125% */
+  line-height: 40px;
+  /* 125% */
   letter-spacing: -1px;
   margin-top: 20px;
 }
@@ -150,7 +154,7 @@ header {
 
 .project-heading {
   color: #fff;
-  font-feature-settings: "clig" off, "liga" off;
+  font-feature-settings: "clig"off, "liga"off;
   font-family: "Space Grotesk";
   font-size: 24px;
   font-style: normal;
@@ -168,7 +172,7 @@ header {
 
 .language-paragraph {
   color: #d9d9d9;
-  font-feature-settings: "clig" off, "liga" off;
+  font-feature-settings: "clig"off, "liga"off;
   font-family: "Space Grotesk";
   font-size: 18px;
   font-style: normal;
@@ -217,19 +221,20 @@ header {
 
 .contact-heading {
   color: #FFF;
-text-align: center;
-font-family: "Space Grotesk";
-font-size: 40px;
-font-style: normal;
-font-weight: 700;
-line-height: 40px; /* 100% */
-letter-spacing: -1.136px;
-margin-bottom: 20px;
+  text-align: center;
+  font-family: "Space Grotesk";
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 40px;
+  /* 100% */
+  letter-spacing: -1.136px;
+  margin-bottom: 20px;
 }
 
 .contact-paragraph {
   max-width: 343px;
-  color:#d9d9d9;
+  color: #d9d9d9;
   text-align: center;
   font-family: "Space Grotesk";
   font-size: 16px;
@@ -242,32 +247,33 @@ margin-bottom: 20px;
 input, textarea {
   background-color: #151515;
   border: none;
-    outline: none;
-    border-bottom: 1px solid #FFF; /* Customize the color as needed */
-    padding: 10px 0;
-    margin: 10px 0;
-    width: 100%;
-    text-transform: uppercase;
-    color: #FFF;
+  outline: none;
+  border-bottom: 1px solid #FFF;
+  /* Customize the color as needed */
+  padding: 10px 0;
+  margin: 10px 0;
+  width: 100%;
+  text-transform: uppercase;
+  color: #FFF;
 }
 
 button {
   cursor: pointer;
   padding: 10px 20px;
-  margin-top: 20px; /* Adjust as needed */
+  margin-top: 20px;
+  /* Adjust as needed */
   background-color: #151515;
   border: none;
-  color:#FFF; 
+  color: #FFF;
   font-family: "Space Grotesk";
-font-size: 16px;
-font-style: normal;
-font-weight: 700;
-line-height: 26px; /* 162.5% */
-letter-spacing: 2.286px;
-border-bottom: 1px solid #4ee1a0;
-margin-bottom: 50px;
-margin-left: 40%;
-text-transform: uppercase;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 26px;
+  /* 162.5% */
+  letter-spacing: 2.286px;
+  border-bottom: 1px solid #4ee1a0;
+  margin-bottom: 50px;
+  margin-left: 40%;
+  text-transform: uppercase;
 }
-
-
