--- a/index.css
+++ b/index.css
@@ -16,32 +16,52 @@ body {
 
 .container {
   width: 100%;
-  background-color: #151515;
+  background-color: #EBE0E4;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
+.contain {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  background-image: url("./assets/images/Al\ photo-min-min\ 3.png");
+  background-repeat: no-repeat;
+  background-size: 60% 50%;
+  background-position: center  10%;
+  margin-bottom: 20px;
+}
+
+
 
 .name-links-div {
+  
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 70%;
+  margin-top: 10px;
 }
 
-.profile-picture-container {
+/*.profile-picture-container {
   width: 174px;
   height: 280px;
   background-image: url("./assets/images/my-photo.jpg");
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   background-color: #151515;
-  margin-bottom: 20px;
-}
+  margin-bottom: 40px;
+}*/
 
 .contact-div {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 80px;
+
 }
 
 .name {
@@ -52,18 +72,19 @@ body {
   line-height: 32px;
   /* 133.333% */
   letter-spacing: -0.333px;
-  color: #fff;
-  margin-top: 20px;
+  color: #403D52;
+  
 }
 
 .intro-summary-div {
   display: flex;
   flex-direction: column;
   align-items: center;
+  
 }
 
 .intro-heading {
-  color: #fff;
+  color: #403D52;
   text-align: center;
   font-family: "Space Grotesk";
   font-size: 40px;
@@ -77,7 +98,7 @@ body {
 }
 
 .summary-paragraph {
-  color: #d9d9d9;
+  color: #403D52;
   text-align: center;
   font-family: "Space Grotesk";
   font-size: 16px;
@@ -89,7 +110,7 @@ body {
 }
 
 .contactme-button {
-  color: #fff;
+  color: #403D52;
   font-family: "Space Grotesk";
   font-size: 16px;
   font-style: normal;
@@ -97,20 +118,21 @@ body {
   line-height: 26px;
   /* 162.5% */
   letter-spacing: 2.286px;
-  border-bottom: 2px solid #4ee1a0;
+  border-bottom: 2px solid #BF5A7F;
 }
 
 .skills-container {
+  width: 90%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-top: 2px solid white;
-  border-bottom: 2px solid white;
+  border-top: 2px solid #403D52;;
+  border-bottom: 2px solid #403D52;;
   margin-bottom: 65px;
 }
 
 .languages {
-  color: #fff;
+  color: #403D52;
   text-align: center;
   font-family: "Space Grotesk";
   font-size: 32px;
@@ -123,7 +145,7 @@ body {
 }
 
 .yearsof-experience {
-  color: #d9d9d9;
+  color: #403D52;
   text-align: center;
   font-family: "Space Grotesk";
   font-size: 16px;
@@ -136,12 +158,12 @@ body {
 .projects-title {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   margin-bottom: 40px;
 }
 
 .projects-heading {
-  color: #fff;
+  color: #403D52;
   font-family: "Space Grotesk";
   font-size: 40px;
   font-style: normal;
@@ -149,6 +171,10 @@ body {
   line-height: 40px;
   letter-spacing: -1.136px;
 }
+
+
+
+
 
 .project-container {
   background-image: url("./assets/images/thumbnail-project-1-small.webp");
@@ -160,7 +186,7 @@ body {
 }
 
 .project-heading {
-  color: #fff;
+  color: #403D52;
   font-feature-settings: "clig" off, "liga" off;
   font-family: "Space Grotesk";
   font-size: 24px;
@@ -178,7 +204,7 @@ body {
 }
 
 .language-paragraph {
-  color: #d9d9d9;
+  color: #403D52;
   font-feature-settings: "clig" off, "liga" off;
   font-family: "Space Grotesk";
   font-size: 18px;
@@ -196,14 +222,14 @@ body {
 }
 
 .projects-link {
-  color: #fff;
+  color: #403D52;
   font-family: "Space Grotesk";
   font-size: 16px;
   font-style: normal;
   font-weight: 700;
   line-height: 26px;
   letter-spacing: 2.286px;
-  border-bottom: 2px solid #4ee1a0;
+  border-bottom: 2px solid #BF5A7F;
   text-transform: uppercase;
 }
 
@@ -225,8 +251,19 @@ body {
   margin-bottom: 20px;
 }
 
+.contact-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  background-color: #EBE0E4;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
 .contact-heading {
-  color: #fff;
+  color: #403D52;
   text-align: center;
   font-family: "Space Grotesk";
   font-size: 40px;
@@ -240,7 +277,7 @@ body {
 
 .contact-paragraph {
   max-width: 343px;
-  color: #d9d9d9;
+  color: #403D52;
   text-align: center;
   font-family: "Space Grotesk";
   font-size: 16px;
@@ -250,18 +287,23 @@ body {
   margin-bottom: 40px;
 }
 
+form {
+  text-align: end;
+  width: 70%;
+}
+
 input,
 textarea {
-  background-color: #151515;
+  background-color: #EBE0E4;
   border: none;
   outline: none;
-  border-bottom: 1px solid #fff;
+  border-bottom: 1px solid #403D52;
   /* Customize the color as needed */
   padding: 10px 0;
   margin: 10px 0;
   width: 100%;
   text-transform: uppercase;
-  color: #fff;
+  color: #403D52;;
 }
 
 button {
@@ -269,9 +311,9 @@ button {
   padding: 10px 20px;
   margin-top: 20px;
   /* Adjust as needed */
-  background-color: #151515;
+  background-color: #EBE0E4;
   border: none;
-  color: #fff;
+  color: #403D52;;
   font-family: "Space Grotesk";
   font-size: 16px;
   font-style: normal;
@@ -279,24 +321,26 @@ button {
   line-height: 26px;
   /* 162.5% */
   letter-spacing: 2.286px;
-  border-bottom: 1px solid #4ee1a0;
+  border-bottom: 1px solid #BF5A7F;
   margin-bottom: 50px;
-  margin-left: 40%;
   text-transform: uppercase;
 }
 
-@media only screen and (min-width: 768px) and (max-width: 1208px) {
+
+
+@media (min-width: 768px) {
   .contact-div {
-    display: flex;
     flex-direction: row-reverse;
-    align-items: center;
+    align-items: stretch;
   }
 
   .profile-picture-container {
     background-image: url("./assets/images/my-photo.jpg");
     background-repeat: no-repeat;
-    width: 349.854px;
-    height: 386px;
+    background-position: center;
+    width: 500px;
+    height: 400px;
+    
   }
 
   .name-links-div {
@@ -306,11 +350,16 @@ button {
     justify-content: space-between;
   }
 
+  form {
+    width: 60%;
+  }
+
   .name {
     font-size: 32px;
   }
 
   .intro-heading {
+    line-height: 72px;
     font-size: 72px;
   }
 
@@ -405,6 +454,29 @@ button {
 
 }
 
-@media only screen and (min-width: 1280px) {
+@media (min-width: 1024px) {
 
+  .contact-section {
+    flex-direction: row;
+    align-items: start;
+  }
+  form {
+    width: 40%
+  }
+
+  /*.projects-container {
+    width: 440px;
+    height: 300px;
+  }
+
+  .second-project-container {
+    width: 440px;
+    height: 300px;
+  }
+
+  .third-project-container {
+    width: 440px;
+    height: 300px;
+  }*/
+  
 }
