--- a/index.css
+++ b/index.css
@@ -507,3 +507,28 @@ button:hover {
 
   
 }
+
+@keyframes explosion {
+  0% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(2);
+  }
+}
+
+.explosion {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 100px;
+  height: 100px;
+  background: red;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  animation: explosion 0.5s forwards;
+  pointer-events: none;
+}
+
